# survey123_fieldmaps_arcgis_online

./: .gitignore  cursor_arcgis_field_solutions_deploymen.md  field_maps_survey123_arcgis_online_plan.md
.github/workflows/: agol-promote.yml
agol_promote/: README.md  projects.yaml  promote.py  promote_core.py  promote_dev_to_cert.py  requirements.txt
arcade/popups/: displayVegMonLineExpr.lxp  displayVegMonPointExpr.lxp
schema_builder/: .gitignore  README.md  pyproject.toml  requirements.txt
schema_builder/vegqc_schema/: __init__.py  __main__.py  builder.py  config.py  registry.py  vegetation.py
