[project]
name = "vegqc-schema-builder"
version = "0.1.0"
description = "Build file geodatabase feature classes for vegetation monitoring field workflows"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
vegqc-schema = "vegqc_schema.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["vegqc_schema*"]
